--- a/spring-boot-samples/pom.xml
+++ b/spring-boot-samples/pom.xml
@@ -73,6 +73,7 @@
 		<module>spring-boot-sample-session</module>
 		<module>spring-boot-sample-session-webflux</module>
 		<module>spring-boot-sample-simple</module>
+		<module>spring-boot-sample-simpleweb</module>
 		<module>spring-boot-sample-test</module>
 		<module>spring-boot-sample-test-nomockito</module>
 		<module>spring-boot-sample-testng</module>
